# Furrow

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert
src/: main.cpp
src/engine/assets/: ModelLoader.cpp  ModelLoader.h
src/engine/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/engine/ecs/: Entity.h
src/engine/render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Raycast.cpp  Raycast.h  Shader.cpp  Shader.h
